Fixed inital transition on dark mode

--- a/portfolio.web/src/components/elements/TimelapseBackground/TimelapseBackground.scss
+++ b/portfolio.web/src/components/elements/TimelapseBackground/TimelapseBackground.scss
@@ -77,27 +77,29 @@ $dark-percentage-4: 70%;
     left: 0;
     top: 0;
     z-index: -1;
+    background: linear-gradient(to bottom,
+            var(--background-1),
+            var(--background-2) var(--percentage-2),
+            var(--background-3) var(--percentage-3),
+            var(--background-4) var(--percentage-4),
+            var(--background-5));
 
-    // Use CSS variables for colors and percentages in the gradient
-    background: linear-gradient(
-        to bottom,
-        var(--background-1),
-        var(--background-2) var(--percentage-2),
-        var(--background-3) var(--percentage-3),
-        var(--background-4) var(--percentage-4),
-        var(--background-5)
-    );
+    // No transition initially
+    &.transition-enabled {
+        transition:
+            --background-1 $transition-time,
+            --background-2 $transition-time,
+            --background-3 $transition-time,
+            --background-4 $transition-time,
+            --background-5 $transition-time,
+            --percentage-2 $transition-time,
+            --percentage-3 $transition-time,
+            --percentage-4 $transition-time;
 
-    // Transition between background colors and percentages
-    transition: 
-        --background-1 $transition-time, 
-        --background-2 $transition-time, 
-        --background-3 $transition-time, 
-        --background-4 $transition-time, 
-        --background-5 $transition-time, 
-        --percentage-2 $transition-time, 
-        --percentage-3 $transition-time, 
-        --percentage-4 $transition-time;
+        img {
+            transition: filter $transition-time ease-in-out;
+        }
+    }
 
     img {
         position: absolute;
@@ -106,19 +108,16 @@ $dark-percentage-4: 70%;
         width: 100%;
         height: 60%;
         filter: brightness(0.5) blur(0.3px);
-        transition: filter $transition-time ease-in-out;
     }
 
     // Dark mode
     &.dark {
-        // Use dark background variables for the gradient colors
+        // Replace variable values with the dark versions
         --background-1: #{$dark-background-1};
         --background-2: #{$dark-background-2};
         --background-3: #{$dark-background-3};
         --background-4: #{$dark-background-4};
         --background-5: #{$dark-background-5};
-
-        // Use dark mode percentages
         --percentage-2: #{$dark-percentage-2};
         --percentage-3: #{$dark-percentage-3};
         --percentage-4: #{$dark-percentage-4};
